Refactored main using cursor